<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_view_borders"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTxtInvestmentToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/textViewTxtInvestmentToday"
        android:textSize="@dimen/xmlTxtTextSize"
        app:layout_constraintEnd_toStartOf="@+id/textViewValueInvestmentToday"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValueInvestmentToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/xmlValueTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTxtInvestmentToday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTxtInvestmentToday"
        tools:text="35 214 р." />

    <TextView
        android:id="@+id/textViewTxtValYearYield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/textViewTxtValYearYield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTxtInvestmentToday"
        tools:text="Доходность 8% годовых" />

    <TextView
        android:id="@+id/textViewTxtAfter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewTxtAfter"
        android:textSize="@dimen/xmlTxtTextSize"
        app:layout_constraintEnd_toStartOf="@+id/textViewValueAfter"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTxtValYearYield" />

    <TextView
        android:id="@+id/textViewValueAfter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="@dimen/xmlValueTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTxtAfter"
        app:layout_constraintEnd_toStartOf="@+id/textViewTxtWillBe"
        app:layout_constraintStart_toEndOf="@id/textViewTxtAfter"
        tools:text="5 лет" />

    <TextView
        android:id="@+id/textViewTxtWillBe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTxtWillBe"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewValueAfter"
        app:layout_constraintEnd_toStartOf="@+id/textViewValueWillBe"
        app:layout_constraintStart_toEndOf="@id/textViewValueAfter" />

    <TextView
        android:id="@+id/textViewValueWillBe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="@dimen/xmlValueTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTxtWillBe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewTxtWillBe"
        tools:text="50 362 р." />

    <TextView
        android:id="@+id/textViewTxtYield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewTxtYield"
        app:layout_constraintEnd_toStartOf="@+id/textViewValueProfit"
        app:layout_constraintTop_toBottomOf="@+id/textViewValueWillBe" />

    <TextView
        android:id="@+id/textViewValueProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/xmlValueTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTxtYield"
        app:layout_constraintEnd_toEndOf="@+id/textViewTxtValYearYield"
        tools:text="14 026 р." />


</androidx.constraintlayout.widget.ConstraintLayout>